[gd_scene load_steps=14 format=3 uid="uid://bel7jmcgldwwf"]

[ext_resource type="Texture2D" uid="uid://csm13uwlsfiur" path="res://assets/backgrounds/backgroundCastles.png" id="1_ihxd7"]
[ext_resource type="Script" path="res://resources/scripts/MainMenu.gd" id="1_kughj"]
[ext_resource type="Theme" uid="uid://bur45gcdny8mk" path="res://resources/default.tres" id="2_7ray0"]
[ext_resource type="FontFile" uid="uid://dcy4tcp1un3hm" path="res://assets/VCR_OSD_MONO_1.001.ttf" id="3_yigb5"]

[sub_resource type="Animation" id="Animation_uii4t"]
resource_name = "open_options"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-512, 0)]
}

[sub_resource type="Animation" id="Animation_qfx74"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kbhuq"]
resource_name = "close_options"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(-512, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_h4gyy"]
resource_name = "open_gamemodes"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(512, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bkv1u"]
_data = {
"RESET": SubResource("Animation_qfx74"),
"close_options": SubResource("Animation_kbhuq"),
"open_gamemodes": SubResource("Animation_h4gyy"),
"open_options": SubResource("Animation_uii4t")
}

[sub_resource type="LabelSettings" id="LabelSettings_fwf2c"]
font = ExtResource("3_yigb5")
font_size = 48
font_color = Color(0, 0, 0, 1)
outline_size = 5
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7kayk"]
font = ExtResource("3_yigb5")
font_size = 48
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2lgnr"]
font = ExtResource("3_yigb5")
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bgir4"]
font = ExtResource("3_yigb5")
font_size = 36
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kughj")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(256, 320)
texture = ExtResource("1_ihxd7")
region_rect = Rect2(0, 0, 1024, 1024)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bkv1u")
}

[node name="Main" type="Control" parent="."]
anchors_preset = 0

[node name="Play" type="Button" parent="Main"]
layout_mode = 0
offset_top = 240.0
offset_right = 512.0
offset_bottom = 290.0
theme = ExtResource("2_7ray0")
text = "Play"

[node name="Options" type="Button" parent="Main"]
layout_mode = 0
offset_top = 295.0
offset_right = 512.0
offset_bottom = 345.0
theme = ExtResource("2_7ray0")
text = "Options"

[node name="Exit" type="Button" parent="Main"]
layout_mode = 0
offset_top = 350.0
offset_right = 512.0
offset_bottom = 400.0
theme = ExtResource("2_7ray0")
text = "Quit"

[node name="GameName" type="Label" parent="Main"]
layout_mode = 0
offset_top = 64.0
offset_right = 511.0
offset_bottom = 107.0
mouse_filter = 1
text = "Lava Tower"
label_settings = SubResource("LabelSettings_fwf2c")
horizontal_alignment = 1

[node name="GamemodeSelect" type="Control" parent="."]
anchors_preset = 0

[node name="Title" type="Label" parent="GamemodeSelect"]
layout_mode = 0
offset_left = 511.0
offset_top = 64.0
offset_right = 1022.0
offset_bottom = 107.0
mouse_filter = 1
text = "Choose a gamemode"
label_settings = SubResource("LabelSettings_fwf2c")
horizontal_alignment = 1

[node name="Normal" type="Button" parent="GamemodeSelect"]
layout_mode = 0
offset_left = 512.0
offset_top = 226.0
offset_right = 769.0
offset_bottom = 432.0
theme = ExtResource("2_7ray0")
theme_override_font_sizes/font_size = 48

[node name="Label" type="Label" parent="GamemodeSelect/Normal"]
layout_mode = 0
offset_right = 257.0
offset_bottom = 206.0
text = "Normal"
label_settings = SubResource("LabelSettings_7kayk")
horizontal_alignment = 1

[node name="Description" type="Label" parent="GamemodeSelect/Normal"]
layout_mode = 0
offset_top = 46.0
offset_right = 257.0
offset_bottom = 206.0
text = "Play through 3 seasons!"
label_settings = SubResource("LabelSettings_2lgnr")
horizontal_alignment = 1
autowrap_mode = 1

[node name="Endless" type="Button" parent="GamemodeSelect"]
layout_mode = 0
offset_left = 769.0
offset_top = 226.0
offset_right = 1026.0
offset_bottom = 432.0
theme = ExtResource("2_7ray0")
theme_override_font_sizes/font_size = 48

[node name="Label" type="Label" parent="GamemodeSelect/Endless"]
layout_mode = 0
offset_right = 257.0
offset_bottom = 206.0
text = "Endless"
label_settings = SubResource("LabelSettings_7kayk")
horizontal_alignment = 1

[node name="Description" type="Label" parent="GamemodeSelect/Endless"]
layout_mode = 0
offset_top = 46.0
offset_right = 257.0
offset_bottom = 206.0
text = "Play without limits!"
label_settings = SubResource("LabelSettings_2lgnr")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Options" type="Control" parent="."]
anchors_preset = 0
offset_left = -512.0
offset_right = -512.0

[node name="Back" type="Button" parent="Options"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 50.0
theme = ExtResource("2_7ray0")
text = "Back"

[node name="Audio" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 4.0
offset_top = 80.0
offset_right = 234.0
offset_bottom = 110.0
step = 5.0
value = 100.0

[node name="Label" type="Label" parent="Options/Audio"]
layout_mode = 0
offset_top = -24.0
offset_right = 256.0
offset_bottom = 8.0
text = "Audio"
label_settings = SubResource("LabelSettings_bgir4")

[node name="Music" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 256.0
offset_top = 80.0
offset_right = 499.0
offset_bottom = 110.0
step = 5.0
value = 100.0

[node name="Label" type="Label" parent="Options/Music"]
layout_mode = 0
offset_top = -24.0
offset_right = 256.0
offset_bottom = 8.0
text = "Music"
label_settings = SubResource("LabelSettings_bgir4")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="Main/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/Exit" to="." method="_on_exit_pressed"]
[connection signal="gui_input" from="Main/GameName" to="." method="_on_game_name_gui_input"]
[connection signal="pressed" from="GamemodeSelect/Normal" to="." method="_on_gamemode_normal_pressed"]
[connection signal="pressed" from="GamemodeSelect/Endless" to="." method="_on_gamemode_endless_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
[connection signal="drag_ended" from="Options/Audio" to="." method="_on_audio_drag_ended"]
[connection signal="drag_ended" from="Options/Music" to="." method="_on_music_drag_ended"]
